--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "projet-electron",
   "version": "1.0.0",
-  "description": "avoir node.js installé puis faire ``npm install`` dans le projet",
-  "main": "index.js",
+  "description": "Avoir Node.js installé puis faire `npm install` dans le projet",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron .",
+    "build": "electron-builder"
+  },
+  "build": {
+    "appId": "com.exemple.projetelectron",
+    "productName": "ProjetElectron",
+    "files": [
+      "**/*"
+    ],
+    "win": {
+      "target": "nsis"
+    }
   },
   "repository": {
     "type": "git",
@@ -19,6 +30,7 @@
   },
   "homepage": "https://github.com/neo-pdf/projet-electron#readme",
   "devDependencies": {
-    "electron": "^36.2.0"
+    "electron": "^36.2.0",
+    "electron-builder": "^26.0.12"
   }
 }
